<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOverActivity"
    android:theme="@style/Theme.AppCompat.Dialog"
    android:background="#66121212" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewWinLoseDraw"
        app:layout_constraintWidth_percent=".4">

        <ImageView
            android:id="@+id/ImageViewWin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/win"
            android:src="@drawable/win"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ImageViewLose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/lose"
            android:src="@drawable/losw"
            android:visibility="gone" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/ImageViewDraw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/draw"
            android:src="@drawable/neutral" />

    </RelativeLayout>

    <TextView
        android:id="@+id/TextViewWinLoseDraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:textColor="@color/purple_700"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="you have won" />

    <android.widget.Button
        android:id="@+id/ButtonRetryTester"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".6"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_ripple"
        android:padding="8dp"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/ButtonGoBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/ButtonGoBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".7"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_ripple"
        android:text="@string/go_back"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    
</androidx.constraintlayout.widget.ConstraintLayout>

