<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity" >

    <ImageButton
        android:id="@+id/button_exit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_exit_to_app_24"
        android:backgroundTint="#001f12"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_ripple_2"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".12"
        android:contentDescription="@string/exit" />

    <android.widget.Button
        android:id="@+id/button_quick_match"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_ripple"
        android:minHeight="60dp"
        android:text="@string/quick_match"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_offline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <android.widget.Button
        android:id="@+id/button_offline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text="@string/offline"
        android:textAllCaps="false"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_ripple"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8" />


</androidx.constraintlayout.widget.ConstraintLayout>

