<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuickMatchActivity"
    android:id="@+id/Activity2Layout" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/select_your_character_first"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_message">

            <Button
                android:id="@+id/button_cross"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_700"
                android:text="@string/x"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_zero"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".4" />

            <Button
                android:id="@+id/button_zero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/o"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_cross"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Layout4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.widget.Button
                android:id="@+id/box00"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/box01"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".32"
                tools:text="x" />

            <android.widget.Button
                android:id="@+id/box01"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/box02"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/box00"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".32"
                tools:text="o" />

            <android.widget.Button
                android:id="@+id/box02"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/box01"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".32"
                tools:text="x" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Layout5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Layout4">

            <android.widget.Button
                android:id="@+id/box10"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/box11"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".32"
                tools:text="x" />


            <android.widget.Button
                android:id="@+id/box11"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/box12"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/box10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".32"
                tools:text="o" />

            <android.widget.Button
                android:id="@+id/box12"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/box11"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".32"
                tools:text="x" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Layout6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Layout5">

            <android.widget.Button
                android:id="@+id/box20"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/box21"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".32"
                tools:text="x" />


            <android.widget.Button
                android:id="@+id/box21"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/box22"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/box20"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".32"
                tools:text="o" />

            <android.widget.Button
                android:id="@+id/box22"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/box21"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".32"
                tools:text="x" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainLayout">

        <android.widget.Button
            android:id="@+id/button_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_ripple"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintVertical_bias=".05"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".45" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
