<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfflineActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#EDE8DD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_message_opponent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/opponent_move"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_restart_opponent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/button_restart_opponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_ripple"
            android:contentDescription="@string/my_move"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_restart_alt_24"
            android:text="@string/restart"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Layout4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.widget.Button
                android:id="@+id/box00"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple_2"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/box01"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3"
                tools:text="x" />


            <android.widget.Button
                android:id="@+id/box01"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple_2"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/box02"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/box00"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3"
                tools:text="o" />

            <android.widget.Button
                android:id="@+id/box02"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple_2"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/box01"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3"
                tools:text="x" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Layout5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Layout4">

            <android.widget.Button
                android:id="@+id/box10"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="sans-serif"
                android:background="@drawable/button_ripple_2"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/box11"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3"
                tools:text="x" />


            <android.widget.Button
                android:id="@+id/box11"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple_2"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/box12"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/box10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3"
                tools:text="o" />

            <android.widget.Button
                android:id="@+id/box12"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple_2"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/box11"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3"
                tools:text="x" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Layout6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Layout5">

            <android.widget.Button
                android:id="@+id/box20"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple_2"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/box21"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3"
                tools:text="x" />


            <android.widget.Button
                android:id="@+id/box21"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple_2"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/box22"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/box20"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3"
                tools:text="o" />

            <android.widget.Button
                android:id="@+id/box22"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_ripple_2"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/box21"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3"
                tools:text="x" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#E7FAFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainLayout">


        <TextView
            android:id="@+id/tv_message_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/my_move"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_restart_mine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/button_restart_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_ripple"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_restart_alt_24"
            android:text="@string/restart"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/my_move" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
